2007-04-17  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi: findex set and clear.
	From Kevin Ryde, 16 Apr 2007 11:15:00.

2007-04-12  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi: improve @: usage and documentation throughout.

2007-04-08  Karl Berry  <karl@gnu.org>

	* makeinfo/makeinfo.c (bs_escape_quote): new fn.
	(cm_image) <Info output>: call it, to escape the alt string.
	Also expand the alt string.
	bug-texinfo mail from Kevin Ryde, 26 Mar 2007 07:06:14.

	* doc/texinfo.tex (\printindex): set \plainfrenchspacing.

2007-04-07  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex (\defunpenalty): new register.
	(\startdefun): use it to avoid page breaks between a defun and a
	single defunx -- only allow breaks between multiple defunx's.
	From Oleg.

2007-04-03  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex (\whatsitskip, \whatsitpenalty): new registers.
	(\safewhatsit): generalization of \dosubindsanitize.  Change call.
	(\pdfmkdest, \dosubind, \setref): call it.  This avoids a page
	break at an anchor (lispref/loading.texi/load-read-function).
	From Oleg.

2007-04-02  Karl Berry  <karl@gnu.org>

	* util/gendocs_template: "bytes" is more accurate than "characters".
	* util/gendocs.sh: force English settings; improve --help.
	From Bruno.

2007-03-31  Karl Berry  <karl@gnu.org>

	* makeinfo/makeinfo.c (init_paragraph): only free output_paragraph
	if it is non-null.

2007-03-31  Roland Levillain  <roland@lrde.epita.fr>

	* makeinfo/makeinfo.c (cm_image): Look for a JPEG image in the
	include search path before giving up.
	Fix inclusion of JPEG images (with non explicit extension)
	not present in the current directory, but in the include search path.

2007-03-28  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Menus): missing word "text".
	From Matt Kraai, 27 Mar 2007 10:26:28 -0700.

2007-03-18  Karl Berry  <karl@gnu.org>

	* makeinfo/makeinfo.c (cm_image): malloc enough space for the .txt
	when given an extension.

2007-03-17  Karl Berry  <karl@gnu.org>
