@@ -1,3 +1,7 @@
+2007-04-21  Karl Berry  <karl@gnu.org>
+
+	* system.h (DMALLOC_FUNC_CHECK) [DMALLOC_DEBUG]: #define.
+
 2007-04-17  Karl Berry  <karl@gnu.org>
 
 	* doc/texinfo.txi: findex set and clear.
